# spark

./: .env.example  .gitignore  README.md  _test_pipeline.py  app.py  config.py  demo_data.py  main.py  observability.py  pipeline.py  pyproject.toml  requirements.txt
agents/: base.py  base_foundry.py  enrichment.py  multilingual.py  normalization.py  publication.py  quality.py  query_intake.py  retrieval.py  seo.py
docs/: ARCHITECTURE.md  demo_specification.md
