[project]
name = "raja-product-pipeline"
version = "0.1.0"
description = "RAJA Intelligent Product Content Pipeline — Microsoft Foundry Demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.75.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "streamlit>=1.40",
    "rich>=13.0",
    "azure-ai-projects>=1.0.0b7",
    "azure-ai-agents>=1.1.0",
    "azure-identity>=1.19.0",
]

[project.optional-dependencies]
tracing = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "azure-monitor-opentelemetry-exporter>=1.0.0b21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
